--- a/Micael_Rosario/css/home.css
+++ b/Micael_Rosario/css/home.css
@@ -8,8 +8,8 @@
 }
 
 body {
-  font-family: 'Raleway', sans-serif;
-  background: #ffffff;
+  font-family: 'Raleway', 'Open Sans',sans-serif;
+  background: linear-gradient(to bottom, #417078, rgb(22, 41, 40));
   color: #ffffff;
   line-height: 1.6;
   padding: 10px;
@@ -19,7 +19,7 @@ body {
 .header {
   padding: 60px 30px;
   text-align: center;
-  background-image: url('/imagens/image2.jpg');
+  background-image: url('/Micael_Rosario/imagens/image2.jpg');
   background-repeat: no-repeat;
   background-size: cover;
   background-position: center;
@@ -93,7 +93,7 @@ body {
 
 /* ================= EFEITO CARD ================ */
 .card {
-  background: #1f1f1f;
+  background: rgba(31, 31, 31, 0.9);
   color: #ffffff;
   padding: 20px;
   margin-bottom: 40px;
@@ -102,7 +102,7 @@ body {
 }
 
 .about-me,.popular-posts,.follow-me{
-  background-color: #5f513c;
+  background-color: rgba(95, 81, 60, 0.9);
 }
 
 .card h2, .card h3, .card h5 {
@@ -175,6 +175,11 @@ body {
   width: 90%;
 }
 
+.popular-posts .post p{
+  font-size: 15px;
+  margin-bottom: 20px;
+}
+
 /* =============== REDES SOCIAIS  =============== */
 .follow-me ul {
   list-style-type: none;
@@ -207,7 +212,7 @@ body {
   text-align: center;
   background: #1f1f1f;
   margin-top: 20px;
-  border-top: 2px solid #ccc;
+  border: 1px solid #161616;
 }
 
 .footer p {
