--- a/Micael_Rosario/css/produto.css
+++ b/Micael_Rosario/css/produto.css
@@ -19,7 +19,7 @@ body {
 .header {
   padding: 60px 30px;
   text-align: center;
-  background-image: url('/imagens/image2.jpg');
+  background-image: url('/Micael_Rosario/imagens/image2.jpg');
   background-repeat: no-repeat;
   background-size: cover;
   background-position: center;
@@ -152,6 +152,7 @@ h3{
     padding: 40px 0;
     color: #fff;
     text-align: center;
+    border: 2px solid black;
 }
 
 .footer-container {
