--- a/Micael_Rosario/css/sobreNos.css
+++ b/Micael_Rosario/css/sobreNos.css
@@ -15,7 +15,7 @@ body {
 header {
     padding: 60px 30px;
     text-align: center;
-    background-image: url('/imagens/image2.jpg'); 
+    background-image: url('/Micael_Rosario/imagens/image2.jpg');
     background-repeat: no-repeat;
     background-size: cover;
     background-position: center;
@@ -82,6 +82,7 @@ main {
     padding: 40px 0;
     color: #fff;
     text-align: center;
+    border: 1px solid black;
 }
 
 .footer-container {
