--- a/Micael_Rosario/css/produto.css
+++ b/Micael_Rosario/css/produto.css
@@ -12,7 +12,6 @@ body {
   background: #ffffff;
   color: #ffffff;
   line-height: 1.6;
-  padding: 10px;
 }
 
 /* =============== Header ================ */
@@ -24,14 +23,13 @@ body {
   background-size: cover;
   background-position: center;
   color: rgb(208, 170, 4);
-  margin-bottom: 30px; 
   border: 2px solid black;
 }
 
 .header h1 {
-  font-size: 60px;
-  text-shadow: 1px 1px 2px rgba(30, 30, 30, 0.5);
-  margin-bottom: 10px;
+    font-size: 60px;
+    text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.5);
+    margin-bottom: 10px;
 }
 
 .header p {
@@ -42,6 +40,34 @@ body {
   color: #f5f5f5;
 }
 
+/* =============== BARRA DE NAVEGAÇÃO ====================*/
+.topnav {
+    overflow: hidden;
+    background-color: #1f1f1f;
+    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+  }
+  
+  .topnav a {
+    float: left;
+    display: block;
+    color: rgb(208, 170, 4);
+    text-align: center;
+    padding: 14px 20px;
+    text-decoration: none;
+    font-size: 18px;
+    font-weight: 600;
+    transition: background-color 0.3s ease, color 0.3s ease;
+  }
+  
+  .topnav a:hover {
+    background-color: rgb(208, 170, 4);
+    color: #fff;
+  }
+  
+  .topnav .contato {
+    float: right;
+  }
+
 /* ==========    MAIN     =============*/
 .container {
   max-width: 100%;
@@ -50,7 +76,7 @@ body {
   background: #bf61bf;
   border-radius: 8px;
   box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-  margin-bottom: 30px;
+  margin: 30px 0;
   border: 2px solid #000000;
 }
 
