--- a/Micael_Rosario/css/servicos.css
+++ b/Micael_Rosario/css/servicos.css
@@ -26,7 +26,6 @@ body {
     background-size: cover;
     background-position: center;
     color: rgb(208, 170, 4);
-    margin-bottom: 30px; 
     border: 2px solid black;
 }
 
@@ -43,6 +42,35 @@ body {
     font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
     color: #ffffff;
 }
+
+/* =============== BARRA DE NAVEGAÇÃO ====================*/
+.topnav {
+    overflow: hidden;
+    background-color: #1f1f1f;
+    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+  }
+  
+  .topnav a {
+    float: left;
+    display: block;
+    color: rgb(208, 170, 4);
+    text-align: center;
+    padding: 14px 20px;
+    text-decoration: none;
+    font-size: 18px;
+    font-weight: 600;
+    transition: background-color 0.3s ease, color 0.3s ease;
+  }
+  
+  .topnav a:hover {
+    background-color: rgb(208, 170, 4);
+    color: #fff;
+  }
+  
+  .topnav .contato {
+    float: right;
+  }
+
 
 nav ul {
     list-style: none;
